ATG is coremod again; removing PMP; increasing village generation

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -5954,6 +5954,7 @@ gardentrees {
     B:thinlog.1098=false
     B:thinlog.1099=false
     B:thinlog.1104=false
+    B:thinlog.1109=false
     B:thinlog.1110=false
     B:thinlog.1111=false
     B:thinlog.1112=false
@@ -6067,6 +6068,7 @@ gardentrees {
     B:thinlog.13386=false
     B:thinlog.13387=false
     B:thinlog.13392=false
+    B:thinlog.13397=false
     B:thinlog.13398=false
     B:thinlog.13399=false
     B:thinlog.13400=false
@@ -6239,6 +6241,7 @@ gardentrees {
     B:thinlog.5194=false
     B:thinlog.5195=false
     B:thinlog.5200=false
+    B:thinlog.5205=false
     B:thinlog.5206=false
     B:thinlog.5207=false
     B:thinlog.5208=false
@@ -6408,6 +6411,7 @@ gardentrees {
     B:thinlog.9290=false
     B:thinlog.9291=false
     B:thinlog.9296=false
+    B:thinlog.9301=false
     B:thinlog.9302=false
     B:thinlog.9303=false
     B:thinlog.9304=false
@@ -6491,6 +6495,7 @@ gardentrees {
     B:thinlogfence.1098=false
     B:thinlogfence.1099=false
     B:thinlogfence.1104=false
+    B:thinlogfence.1109=false
     B:thinlogfence.1110=false
     B:thinlogfence.1111=false
     B:thinlogfence.1112=false
@@ -6604,6 +6609,7 @@ gardentrees {
     B:thinlogfence.13386=false
     B:thinlogfence.13387=false
     B:thinlogfence.13392=false
+    B:thinlogfence.13397=false
     B:thinlogfence.13398=false
     B:thinlogfence.13399=false
     B:thinlogfence.13400=false
@@ -6776,6 +6782,7 @@ gardentrees {
     B:thinlogfence.5194=false
     B:thinlogfence.5195=false
     B:thinlogfence.5200=false
+    B:thinlogfence.5205=false
     B:thinlogfence.5206=false
     B:thinlogfence.5207=false
     B:thinlogfence.5208=false
@@ -6945,6 +6952,7 @@ gardentrees {
     B:thinlogfence.9290=false
     B:thinlogfence.9291=false
     B:thinlogfence.9296=false
+    B:thinlogfence.9301=false
     B:thinlogfence.9302=false
     B:thinlogfence.9303=false
     B:thinlogfence.9304=false
@@ -11158,6 +11166,118 @@ rotarycraft {
     B:rotarycraftblockshaft=false
     B:rotarycraftblocksolar=false
     B:rotarycraftblocktrans=false
+}
+
+
+securitycraft {
+    B:alarm=false
+    B:alarmLit=false
+    B:bogusLava=false
+    B:bogusLavaFlowing=false
+    B:bogusWater=false
+    B:bogusWaterFlowing=false
+    B:bouncingBetty=false
+    B:cageTrap=false
+    B:claymoreActive=false
+    B:claymoreDefused=false
+    B:cobblestoneMine=false
+    B:deactivatedCageTrap=false
+    B:diamondMine=false
+    B:dirtMine=false
+    B:furnaceMine=false
+    B:ims=false
+    B:inventoryScanner=false
+    B:inventoryScannerField=false
+    B:ironDoorReinforced=false
+    B:ironTrapdoor=false
+    B:keycardReader=false
+    B:keypad=false
+    B:keypadChest=false
+    B:keypadFrame=false
+    B:keypadFurnace=false
+    B:laser=false
+    B:laserBlock=false
+    B:mine=false
+    B:mineCut=false
+    B:panicButton=false
+    B:portableRadar=false
+    B:reinforcedCobblestone=false
+    B:reinforcedDirt=false
+    B:reinforcedDirtSlab.3=false
+    B:reinforcedDoubleDirtSlab=false
+    B:reinforcedDoubleStoneSlabs=false
+    B:reinforcedDoubleWoodSlabs=false
+    B:reinforcedFenceGate=false
+    B:reinforcedGlass=false
+    B:reinforcedGlassBlock=true
+    B:reinforcedIronBars=false
+    B:reinforcedPlanks=false
+    B:reinforcedPlanks.1=false
+    B:reinforcedPlanks.2=false
+    B:reinforcedPlanks.3=false
+    B:reinforcedPlanks.4=false
+    B:reinforcedPlanks.5=false
+    B:reinforcedSandstone=false
+    B:reinforcedSandstone.1=false
+    B:reinforcedSandstone.2=false
+    B:reinforcedStainedGlass=false
+    B:reinforcedStainedGlass.1=false
+    B:reinforcedStainedGlass.10=false
+    B:reinforcedStainedGlass.11=false
+    B:reinforcedStainedGlass.12=false
+    B:reinforcedStainedGlass.13=false
+    B:reinforcedStainedGlass.14=false
+    B:reinforcedStainedGlass.15=false
+    B:reinforcedStainedGlass.2=false
+    B:reinforcedStainedGlass.3=false
+    B:reinforcedStainedGlass.4=false
+    B:reinforcedStainedGlass.5=false
+    B:reinforcedStainedGlass.6=false
+    B:reinforcedStainedGlass.7=false
+    B:reinforcedStainedGlass.8=false
+    B:reinforcedStainedGlass.9=false
+    B:reinforcedStainedGlassPanes=false
+    B:reinforcedStainedGlassPanes.1=false
+    B:reinforcedStainedGlassPanes.10=false
+    B:reinforcedStainedGlassPanes.11=false
+    B:reinforcedStainedGlassPanes.12=false
+    B:reinforcedStainedGlassPanes.13=false
+    B:reinforcedStainedGlassPanes.14=false
+    B:reinforcedStainedGlassPanes.15=false
+    B:reinforcedStainedGlassPanes.2=false
+    B:reinforcedStainedGlassPanes.3=false
+    B:reinforcedStainedGlassPanes.4=false
+    B:reinforcedStainedGlassPanes.5=false
+    B:reinforcedStainedGlassPanes.6=false
+    B:reinforcedStainedGlassPanes.7=false
+    B:reinforcedStainedGlassPanes.8=false
+    B:reinforcedStainedGlassPanes.9=false
+    B:reinforcedStairsAcacia=false
+    B:reinforcedStairsBirch=false
+    B:reinforcedStairsCobblestone=false
+    B:reinforcedStairsDarkoak=false
+    B:reinforcedStairsJungle=false
+    B:reinforcedStairsOak=false
+    B:reinforcedStairsSandstone=false
+    B:reinforcedStairsSpruce=false
+    B:reinforcedStairsStone=false
+    B:reinforcedStone=false
+    B:reinforcedStoneSlabs=false
+    B:reinforcedStoneSlabs.1=false
+    B:reinforcedStoneSlabs.2=false
+    B:reinforcedWoodSlabs=false
+    B:reinforcedWoodSlabs.1=false
+    B:reinforcedWoodSlabs.2=false
+    B:reinforcedWoodSlabs.3=false
+    B:reinforcedWoodSlabs.4=false
+    B:reinforcedWoodSlabs.5=false
+    B:retinalScanner=false
+    B:sandMine=false
+    B:scIronFence=false
+    B:securityCamera=false
+    B:stoneMine=false
+    B:trackMine=false
+    B:usernameLogger=false
 }
 
 
