--- a/config/Waila.cfg
+++ b/config/Waila.cfg
@@ -87,6 +87,9 @@ modules {
     B:oc.energy=true
     B:openblocks.fluidamount=true
     B:railcraft.fluidamount=true
+    B:securitycraft.showmodules=true
+    B:securitycraft.showowner=true
+    B:securitycraft.showpasswords=true
     B:sync.showactive=true
     B:sync.showentity=true
     B:sync.showowner=true
@@ -176,6 +179,9 @@ server_forcing {
     B:oc.energy=false
     B:openblocks.fluidamount=false
     B:railcraft.fluidamount=false
+    B:securitycraft.showmodules=false
+    B:securitycraft.showowner=false
+    B:securitycraft.showpasswords=false
     B:sync.showactive=false
     B:sync.showentity=false
     B:sync.showowner=false
