--- a/config/biomesoplenty/structures/villages.cfg
+++ b/config/biomesoplenty/structures/villages.cfg
@@ -3,69 +3,69 @@
 "allow villages" {
     B:Alps=false
     B:Arctic=true
-    B:"Bamboo Forest"=false
-    B:Bayou=false
-    B:Bog=false
-    B:"Boreal Forest"=false
+    B:"Bamboo Forest"=true
+    B:Bayou=true
+    B:Bog=true
+    B:"Boreal Forest"=true
     B:Brushland=true
-    B:Canyon=false
+    B:Canyon=true
     B:Chaparral=true
-    B:"Cherry Blossom Grove"=false
-    B:"Coniferous Forest"=false
+    B:"Cherry Blossom Grove"=true
+    B:"Coniferous Forest"=true
     B:Crag=false
     B:"Dead Forest"=true
-    B:"Dead Swamp"=false
-    B:"Deciduous Forest"=false
-    B:"Dense Forest"=false
-    B:"Eucalyptus Forest"=false
-    B:Fen=false
-    B:"Flower Field"=false
+    B:"Dead Swamp"=true
+    B:"Deciduous Forest"=true
+    B:"Dense Forest"=true
+    B:"Eucalyptus Forest"=true
+    B:Fen=true
+    B:"Flower Field"=true
     B:"Frost Forest"=true
-    B:"Fungi Forest"=false
-    B:Garden=false
+    B:"Fungi Forest"=true
+    B:Garden=true
     B:Grassland=true
     B:Grove=true
     B:Heathland=true
-    B:Highland=false
+    B:Highland=true
     B:"Jade Cliffs"=false
-    B:"Land of Lakes"=false
-    B:"Lavender Fields"=false
-    B:"Lush Desert"=false
-    B:"Lush Swamp"=false
-    B:"Maple Woods"=false
-    B:Marsh=false
+    B:"Land of Lakes"=true
+    B:"Lavender Fields"=true
+    B:"Lush Desert"=true
+    B:"Lush Swamp"=true
+    B:"Maple Woods"=true
+    B:Marsh=true
     B:Meadow=true
-    B:Moor=false
-    B:Mountain=false
-    B:"Mystic Grove"=false
-    B:"Ominous Woods"=false
-    B:Orchard=false
-    B:"Origin Valley"=false
+    B:Moor=true
+    B:Mountain=true
+    B:"Mystic Grove"=true
+    B:"Ominous Woods"=true
+    B:Orchard=true
+    B:"Origin Valley"=true
     B:Outback=true
     B:Prairie=true
-    B:Rainforest=false
-    B:"Redwood Forest"=false
-    B:"Sacred Springs"=false
-    B:"Seasonal Forest"=false
-    B:Shield=false
+    B:Rainforest=true
+    B:"Redwood Forest"=true
+    B:"Sacred Springs"=true
+    B:"Seasonal Forest"=true
+    B:Shield=true
     B:Shrubland=true
-    B:Sludgepit=false
-    B:"Snowy Coniferous Forest"=false
+    B:Sludgepit=true
+    B:"Snowy Coniferous Forest"=true
     B:Steppe=true
-    B:"Temperate Rainforest"=false
-    B:Thicket=false
-    B:"Tropical Rainforest"=false
+    B:"Temperate Rainforest"=true
+    B:Thicket=true
+    B:"Tropical Rainforest"=true
     B:Tundra=true
-    B:Wasteland=false
-    B:Wetland=false
-    B:Woodland=false
-    B:"Xeric Shrubland"=false
+    B:Wasteland=true
+    B:Wetland=true
+    B:Woodland=true
+    B:"Xeric Shrubland"=true
 }
 
 
 "biomes o' plenty world type settings" {
     # In Vanilla it is set to 32
-    I:"Distance between villages"=32
+    I:"Distance between villages"=24
 }
 
 
