Cleanup. Mek and BCA now revert to default configurations.

--- a/config/atg/atg.cfg
+++ b/config/atg/atg.cfg
@@ -42,7 +42,7 @@ features {
     B:Boulders=true
 
     # Adds coal, iron, gold and emeralds to mountain peaks. Disable if you want to use a different mod to manage ore generation.
-    B:HighAltitudeOres=true
+    B:HighAltitudeOres=false
 
     # Generate flowing rivers which follow the terrain. Can sometimes be messy.
     B:Rivers=true
@@ -54,13 +54,13 @@ features {
 
 generator {
     # Scale value for biome sub-blobs. Controls the size of biomes *within* biome groups, NOT the biome groups themselves. This has essentially no effect without additional biome mods, but with them it controls the area of terrain that might be one type of forest instead of another type, within a forested zone. Adding one doubles the biome size, subtracting 1 halves it. Minimum: 1, Default: 4.
-    I:BiomeBlobScale=4
+    I:BiomeBlobScale=3
 
     # Multiplier for height generation. The base height generated is multiplied by this - lower means lower peaks and smoother slopes, higher means more tall mountains, and more chance of volcanoes. 0.0 = all bedrock. Best used to counter negative offsets. Default: 1.0.
-    D:HeightMultiplier=1.0
+    D:HeightMultiplier=0.8
 
     # Scale modifier for the terrain height noise field. Controls the x/z scale of the terrain. Increase to spread out the land, meaning smoother slopes with no net height change, reduce to make things steeper. Default: 1.0.
-    D:HeightNoiseScale=1.0
+    D:HeightNoiseScale=1.2
 
     # Flat modifier to height generation, added to the height of the world, in blocks. 1.0 = 255 blocks. Try values like +/-0.03. Default: 0.0.
     D:HeightOffset=0.0
