--- a/config/cookingbook.cfg
+++ b/config/cookingbook.cfg
@@ -35,7 +35,7 @@ general {
     B:ovenRequiresCookingOil=false
 
     # Set this to true if you'd like the sink to require water to be piped in, instead of providing infinite of it. [default: false]
-    B:sinkRequiresWater=false
+    B:sinkRequiresWater=true
 }
 
 
