Updating enviromine settings

--- a/config/enviromine/profiles/default/default_Settings.cfg
+++ b/config/enviromine/profiles/default/default_Settings.cfg
@@ -13,7 +13,7 @@ Config {
 
 
 Earthquakes {
-    B:"Enable Earthquakes"=true
+    B:"Enable Earthquakes"=false
     I:Rarity=100
 
     # Can cause major lag at times (Requires main physics to be enabled)
@@ -51,7 +51,7 @@ general {
 
     # Turn physics On/Off
     B:"Enable Physics"=true
-    B:"Enable Physics Landslide"=true
+    B:"Enable Physics Landslide"=false
     B:"Enable food spoiling"=true
     B:"Enable villager assistance"=true
     B:"Torches burn"=true
