Working on reasonable realism

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -4758,6 +4758,17 @@ enviromine {
 }
 
 
+expandedindustry {
+    B:PoweredRailBridge=false
+    B:RailBridge=false
+    B:machinecartloader=false
+    B:machinedistributor=false
+    B:machinefilter=false
+    B:machinewoodhopper=false
+    B:railtypedetector=false
+}
+
+
 expandedredstone {
     B:expandedredstoneblockcamo=false
     B:expandedredstoneblockfullblock=false
@@ -5966,6 +5977,10 @@ gardentrees {
     B:thinlog.1128=false
     B:thinlog.1133=false
     B:thinlog.1135=false
+    B:thinlog.1155=false
+    B:thinlog.1156=false
+    B:thinlog.1157=false
+    B:thinlog.1158=false
     B:thinlog.1185=false
     B:thinlog.1201=false
     B:thinlog.1214=false
@@ -6080,6 +6095,10 @@ gardentrees {
     B:thinlog.13416=false
     B:thinlog.13421=false
     B:thinlog.13423=false
+    B:thinlog.13443=false
+    B:thinlog.13444=false
+    B:thinlog.13445=false
+    B:thinlog.13446=false
     B:thinlog.13473=false
     B:thinlog.1348=false
     B:thinlog.13489=false
@@ -6253,6 +6272,10 @@ gardentrees {
     B:thinlog.5224=false
     B:thinlog.5229=false
     B:thinlog.5231=false
+    B:thinlog.5251=false
+    B:thinlog.5252=false
+    B:thinlog.5253=false
+    B:thinlog.5254=false
     B:thinlog.5281=false
     B:thinlog.5297=false
     B:thinlog.5310=false
@@ -6423,6 +6446,10 @@ gardentrees {
     B:thinlog.9320=false
     B:thinlog.9325=false
     B:thinlog.9327=false
+    B:thinlog.9347=false
+    B:thinlog.9348=false
+    B:thinlog.9349=false
+    B:thinlog.9350=false
     B:thinlog.9377=false
     B:thinlog.9393=false
     B:thinlog.9406=false
@@ -6507,6 +6534,10 @@ gardentrees {
     B:thinlogfence.1128=false
     B:thinlogfence.1133=false
     B:thinlogfence.1135=false
+    B:thinlogfence.1155=false
+    B:thinlogfence.1156=false
+    B:thinlogfence.1157=false
+    B:thinlogfence.1158=false
     B:thinlogfence.1185=false
     B:thinlogfence.1201=false
     B:thinlogfence.1214=false
@@ -6621,6 +6652,10 @@ gardentrees {
     B:thinlogfence.13416=false
     B:thinlogfence.13421=false
     B:thinlogfence.13423=false
+    B:thinlogfence.13443=false
+    B:thinlogfence.13444=false
+    B:thinlogfence.13445=false
+    B:thinlogfence.13446=false
     B:thinlogfence.13473=false
     B:thinlogfence.1348=false
     B:thinlogfence.13489=false
@@ -6794,6 +6829,10 @@ gardentrees {
     B:thinlogfence.5224=false
     B:thinlogfence.5229=false
     B:thinlogfence.5231=false
+    B:thinlogfence.5251=false
+    B:thinlogfence.5252=false
+    B:thinlogfence.5253=false
+    B:thinlogfence.5254=false
     B:thinlogfence.5281=false
     B:thinlogfence.5297=false
     B:thinlogfence.5310=false
@@ -6964,6 +7003,10 @@ gardentrees {
     B:thinlogfence.9320=false
     B:thinlogfence.9325=false
     B:thinlogfence.9327=false
+    B:thinlogfence.9347=false
+    B:thinlogfence.9348=false
+    B:thinlogfence.9349=false
+    B:thinlogfence.9350=false
     B:thinlogfence.9377=false
     B:thinlogfence.9393=false
     B:thinlogfence.9406=false
@@ -7135,6 +7178,74 @@ hardcorequesting {
     B:itembarrel=false
     B:questportal=false
     B:questtracker=false
+}
+
+
+harderores {
+    B:dummyOreAluminum=false
+    B:dummyOreCopper=false
+    B:dummyOreGold=false
+    B:dummyOreIron=false
+    B:dummyOreLead=false
+    B:dummyOreNickel=false
+    B:dummyOreSilver=false
+    B:dummyOreTin=false
+    B:dummyOreUranium=false
+    B:machineaxle=false
+    B:machinemillstone=false
+    B:machineprocessor=false
+    B:machinesifter=false
+    B:machinesluice=false
+    B:machinewindvane=false
+    B:orebauxite.15=true
+    B:orecopper.15=true
+    B:orediamond.15=true
+    B:oreflowers=false
+    B:oreflowers.1=false
+    B:oreflowers.2=false
+    B:oreflowers.3=false
+    B:oreflowers.4=false
+    B:oreflowers.5=false
+    B:oreflowers.6=false
+    B:oreflowers.7=false
+    B:oreflowers2=false
+    B:oreflowers2.1=false
+    B:oreflowers2.2=false
+    B:oreflowers2.4=false
+    B:oreflowers2.5=false
+    B:oreflowers2.6=false
+    B:oreflowers2.7=false
+    B:oregold.15=true
+    B:oreiron.15=true
+    B:orelead.15=true
+    B:orelimonite=true
+    B:orenickel.15=true
+    B:oreredstone=false
+    B:oresilver.15=true
+    B:oretin.15=true
+    B:oreuranium.15=true
+}
+
+
+harderunderground {
+    B:rockdust=false
+    B:thinvolatilegas=false
+    B:unstablestone=false
+    B:unstablestone.1=false
+    B:unstablestone.2=false
+    B:unstablestone.3=false
+    B:volatilegas=false
+    B:volcanicgas=false
+}
+
+
+harderwildlife {
+    B:logRotting.12=false
+    B:logRotting.8=false
+    B:machinetanner=false
+    B:snowyTallGrass=false
+    B:weeds=false
+    B:winterWheat=false
 }
 
 
