--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -757,6 +757,18 @@ shedding {
     I:GrimoireOfGaia.Yuki-Onna.metadata=0
     I:GrimoireOfGaia.Yuki-Onna.rate=-1
 
+    # Configuration of Shedding for HarderWildlife.Goat
+    S:HarderWildlife.Goat.item=
+    I:HarderWildlife.Goat.lexiconDisplaySize=40
+    I:HarderWildlife.Goat.metadata=0
+    I:HarderWildlife.Goat.rate=-1
+
+    # Configuration of Shedding for HarderWildlife.Lizard
+    S:HarderWildlife.Lizard.item=
+    I:HarderWildlife.Lizard.lexiconDisplaySize=40
+    I:HarderWildlife.Lizard.metadata=0
+    I:HarderWildlife.Lizard.rate=-1
+
     # Configuration of Shedding for LavaSlime
     S:LavaSlime.item=
     I:LavaSlime.lexiconDisplaySize=40
@@ -770,14 +782,10 @@ shedding {
     I:MantaRay.lexiconDisplaySize=40
     I:MantaRay.metadata=0
     I:MantaRay.rate=-1
-
-    # Configuration of Shedding for Mekanism.BabySkeleton
     S:Mekanism.BabySkeleton.item=
     I:Mekanism.BabySkeleton.lexiconDisplaySize=40
     I:Mekanism.BabySkeleton.metadata=0
     I:Mekanism.BabySkeleton.rate=-1
-
-    # Configuration of Shedding for Mekanism.Robit
     S:Mekanism.Robit.item=
     I:Mekanism.Robit.lexiconDisplaySize=40
     I:Mekanism.Robit.metadata=0
