--- a/config/IguanaTinkerTweaks/BlockDefaults.cfg
+++ b/config/IguanaTinkerTweaks/BlockDefaults.cfg
@@ -81,6 +81,22 @@ blocks_axe {
     I:"BiomesOPlenty:planks:7"=0
     I:"BiomesOPlenty:planks:8"=0
     I:"BiomesOPlenty:planks:9"=0
+    I:"ExpandedIndustry:machine_wood_hopper:0"=0
+    I:"ExpandedIndustry:machine_wood_hopper:1"=0
+    I:"ExpandedIndustry:machine_wood_hopper:10"=0
+    I:"ExpandedIndustry:machine_wood_hopper:11"=0
+    I:"ExpandedIndustry:machine_wood_hopper:12"=0
+    I:"ExpandedIndustry:machine_wood_hopper:13"=0
+    I:"ExpandedIndustry:machine_wood_hopper:14"=0
+    I:"ExpandedIndustry:machine_wood_hopper:15"=0
+    I:"ExpandedIndustry:machine_wood_hopper:2"=0
+    I:"ExpandedIndustry:machine_wood_hopper:3"=0
+    I:"ExpandedIndustry:machine_wood_hopper:4"=0
+    I:"ExpandedIndustry:machine_wood_hopper:5"=0
+    I:"ExpandedIndustry:machine_wood_hopper:6"=0
+    I:"ExpandedIndustry:machine_wood_hopper:7"=0
+    I:"ExpandedIndustry:machine_wood_hopper:8"=0
+    I:"ExpandedIndustry:machine_wood_hopper:9"=0
     I:"ForbiddenMagic:TaintLog:0"=0
     I:"ForbiddenMagic:TaintLog:1"=0
     I:"ForbiddenMagic:TaintLog:10"=0
@@ -538,6 +554,78 @@ blocks_axe {
     I:"Forestry:stairs:7"=0
     I:"Forestry:stairs:8"=0
     I:"Forestry:stairs:9"=0
+    I:"HarderOres:machine_axle:0"=0
+    I:"HarderOres:machine_axle:1"=0
+    I:"HarderOres:machine_axle:10"=0
+    I:"HarderOres:machine_axle:11"=0
+    I:"HarderOres:machine_axle:12"=0
+    I:"HarderOres:machine_axle:13"=0
+    I:"HarderOres:machine_axle:14"=0
+    I:"HarderOres:machine_axle:15"=0
+    I:"HarderOres:machine_axle:2"=0
+    I:"HarderOres:machine_axle:3"=0
+    I:"HarderOres:machine_axle:4"=0
+    I:"HarderOres:machine_axle:5"=0
+    I:"HarderOres:machine_axle:6"=0
+    I:"HarderOres:machine_axle:7"=0
+    I:"HarderOres:machine_axle:8"=0
+    I:"HarderOres:machine_axle:9"=0
+    I:"HarderOres:machine_millstone:0"=1
+    I:"HarderOres:machine_millstone:1"=1
+    I:"HarderOres:machine_millstone:10"=1
+    I:"HarderOres:machine_millstone:11"=1
+    I:"HarderOres:machine_millstone:12"=1
+    I:"HarderOres:machine_millstone:13"=1
+    I:"HarderOres:machine_millstone:14"=1
+    I:"HarderOres:machine_millstone:15"=1
+    I:"HarderOres:machine_millstone:2"=1
+    I:"HarderOres:machine_millstone:3"=1
+    I:"HarderOres:machine_millstone:4"=1
+    I:"HarderOres:machine_millstone:5"=1
+    I:"HarderOres:machine_millstone:6"=1
+    I:"HarderOres:machine_millstone:7"=1
+    I:"HarderOres:machine_millstone:8"=1
+    I:"HarderOres:machine_millstone:9"=1
+    I:"HarderOres:machine_sifter:0"=1
+    I:"HarderOres:machine_sifter:1"=1
+    I:"HarderOres:machine_sifter:10"=1
+    I:"HarderOres:machine_sifter:11"=1
+    I:"HarderOres:machine_sifter:12"=1
+    I:"HarderOres:machine_sifter:13"=1
+    I:"HarderOres:machine_sifter:14"=1
+    I:"HarderOres:machine_sifter:15"=1
+    I:"HarderOres:machine_sifter:2"=1
+    I:"HarderOres:machine_sifter:3"=1
+    I:"HarderOres:machine_sifter:4"=1
+    I:"HarderOres:machine_sifter:5"=1
+    I:"HarderOres:machine_sifter:6"=1
+    I:"HarderOres:machine_sifter:7"=1
+    I:"HarderOres:machine_sifter:8"=1
+    I:"HarderOres:machine_sifter:9"=1
+    I:"HarderOres:machine_sluice:0"=1
+    I:"HarderOres:machine_sluice:1"=1
+    I:"HarderOres:machine_sluice:10"=1
+    I:"HarderOres:machine_sluice:11"=1
+    I:"HarderOres:machine_sluice:12"=1
+    I:"HarderOres:machine_sluice:13"=1
+    I:"HarderOres:machine_sluice:14"=1
+    I:"HarderOres:machine_sluice:15"=1
+    I:"HarderOres:machine_sluice:2"=1
+    I:"HarderOres:machine_sluice:3"=1
+    I:"HarderOres:machine_sluice:4"=1
+    I:"HarderOres:machine_sluice:5"=1
+    I:"HarderOres:machine_sluice:6"=1
+    I:"HarderOres:machine_sluice:7"=1
+    I:"HarderOres:machine_sluice:8"=1
+    I:"HarderOres:machine_sluice:9"=1
+    I:"HarderWildlife:logRotting:0"=0
+    I:"HarderWildlife:logRotting:1"=0
+    I:"HarderWildlife:logRotting:10"=0
+    I:"HarderWildlife:logRotting:11"=0
+    I:"HarderWildlife:logRotting:2"=0
+    I:"HarderWildlife:logRotting:3"=0
+    I:"HarderWildlife:logRotting:8"=0
+    I:"HarderWildlife:logRotting:9"=0
     I:"JABBA:barrel:0"=1
     I:"JABBA:barrel:1"=1
     I:"JABBA:barrel:10"=1
@@ -2754,6 +2842,22 @@ blocks_pickaxe {
     I:"EnderIO:blockZombieGenerator:7"=0
     I:"EnderIO:blockZombieGenerator:8"=0
     I:"EnderIO:blockZombieGenerator:9"=0
+    I:"ExpandedIndustry:machine_filter:0"=0
+    I:"ExpandedIndustry:machine_filter:1"=0
+    I:"ExpandedIndustry:machine_filter:10"=0
+    I:"ExpandedIndustry:machine_filter:11"=0
+    I:"ExpandedIndustry:machine_filter:12"=0
+    I:"ExpandedIndustry:machine_filter:13"=0
+    I:"ExpandedIndustry:machine_filter:14"=0
+    I:"ExpandedIndustry:machine_filter:15"=0
+    I:"ExpandedIndustry:machine_filter:2"=0
+    I:"ExpandedIndustry:machine_filter:3"=0
+    I:"ExpandedIndustry:machine_filter:4"=0
+    I:"ExpandedIndustry:machine_filter:5"=0
+    I:"ExpandedIndustry:machine_filter:6"=0
+    I:"ExpandedIndustry:machine_filter:7"=0
+    I:"ExpandedIndustry:machine_filter:8"=0
+    I:"ExpandedIndustry:machine_filter:9"=0
     I:"ExtraUtilities:color_blockCoal:0"=1
     I:"ExtraUtilities:color_blockCoal:1"=1
     I:"ExtraUtilities:color_blockCoal:10"=1
@@ -3022,6 +3126,342 @@ blocks_pickaxe {
     I:"GalacticraftMars:tile.slimelingEgg:7"=3
     I:"GalacticraftMars:tile.slimelingEgg:8"=3
     I:"GalacticraftMars:tile.slimelingEgg:9"=3
+    I:"HarderOres:dummyOreAluminum:0"=1
+    I:"HarderOres:dummyOreAluminum:1"=0
+    I:"HarderOres:dummyOreAluminum:10"=0
+    I:"HarderOres:dummyOreAluminum:11"=0
+    I:"HarderOres:dummyOreAluminum:12"=0
+    I:"HarderOres:dummyOreAluminum:13"=0
+    I:"HarderOres:dummyOreAluminum:14"=0
+    I:"HarderOres:dummyOreAluminum:15"=0
+    I:"HarderOres:dummyOreAluminum:2"=0
+    I:"HarderOres:dummyOreAluminum:3"=0
+    I:"HarderOres:dummyOreAluminum:4"=0
+    I:"HarderOres:dummyOreAluminum:5"=0
+    I:"HarderOres:dummyOreAluminum:6"=0
+    I:"HarderOres:dummyOreAluminum:7"=0
+    I:"HarderOres:dummyOreAluminum:8"=0
+    I:"HarderOres:dummyOreAluminum:9"=0
+    I:"HarderOres:dummyOreCopper:0"=1
+    I:"HarderOres:dummyOreCopper:1"=0
+    I:"HarderOres:dummyOreCopper:10"=0
+    I:"HarderOres:dummyOreCopper:11"=0
+    I:"HarderOres:dummyOreCopper:12"=0
+    I:"HarderOres:dummyOreCopper:13"=0
+    I:"HarderOres:dummyOreCopper:14"=0
+    I:"HarderOres:dummyOreCopper:15"=0
+    I:"HarderOres:dummyOreCopper:2"=0
+    I:"HarderOres:dummyOreCopper:3"=0
+    I:"HarderOres:dummyOreCopper:4"=0
+    I:"HarderOres:dummyOreCopper:5"=0
+    I:"HarderOres:dummyOreCopper:6"=0
+    I:"HarderOres:dummyOreCopper:7"=0
+    I:"HarderOres:dummyOreCopper:8"=0
+    I:"HarderOres:dummyOreCopper:9"=0
+    I:"HarderOres:dummyOreGold:0"=3
+    I:"HarderOres:dummyOreGold:1"=0
+    I:"HarderOres:dummyOreGold:10"=0
+    I:"HarderOres:dummyOreGold:11"=0
+    I:"HarderOres:dummyOreGold:12"=0
+    I:"HarderOres:dummyOreGold:13"=0
+    I:"HarderOres:dummyOreGold:14"=0
+    I:"HarderOres:dummyOreGold:15"=0
+    I:"HarderOres:dummyOreGold:2"=0
+    I:"HarderOres:dummyOreGold:3"=0
+    I:"HarderOres:dummyOreGold:4"=0
+    I:"HarderOres:dummyOreGold:5"=0
+    I:"HarderOres:dummyOreGold:6"=0
+    I:"HarderOres:dummyOreGold:7"=0
+    I:"HarderOres:dummyOreGold:8"=0
+    I:"HarderOres:dummyOreGold:9"=0
+    I:"HarderOres:dummyOreIron:0"=2
+    I:"HarderOres:dummyOreIron:1"=0
+    I:"HarderOres:dummyOreIron:10"=0
+    I:"HarderOres:dummyOreIron:11"=0
+    I:"HarderOres:dummyOreIron:12"=0
+    I:"HarderOres:dummyOreIron:13"=0
+    I:"HarderOres:dummyOreIron:14"=0
+    I:"HarderOres:dummyOreIron:15"=0
+    I:"HarderOres:dummyOreIron:2"=0
+    I:"HarderOres:dummyOreIron:3"=0
+    I:"HarderOres:dummyOreIron:4"=0
+    I:"HarderOres:dummyOreIron:5"=0
+    I:"HarderOres:dummyOreIron:6"=0
+    I:"HarderOres:dummyOreIron:7"=0
+    I:"HarderOres:dummyOreIron:8"=0
+    I:"HarderOres:dummyOreIron:9"=0
+    I:"HarderOres:dummyOreLead:0"=3
+    I:"HarderOres:dummyOreLead:1"=0
+    I:"HarderOres:dummyOreLead:10"=0
+    I:"HarderOres:dummyOreLead:11"=0
+    I:"HarderOres:dummyOreLead:12"=0
+    I:"HarderOres:dummyOreLead:13"=0
+    I:"HarderOres:dummyOreLead:14"=0
+    I:"HarderOres:dummyOreLead:15"=0
+    I:"HarderOres:dummyOreLead:2"=0
+    I:"HarderOres:dummyOreLead:3"=0
+    I:"HarderOres:dummyOreLead:4"=0
+    I:"HarderOres:dummyOreLead:5"=0
+    I:"HarderOres:dummyOreLead:6"=0
+    I:"HarderOres:dummyOreLead:7"=0
+    I:"HarderOres:dummyOreLead:8"=0
+    I:"HarderOres:dummyOreLead:9"=0
+    I:"HarderOres:dummyOreNickel:0"=3
+    I:"HarderOres:dummyOreNickel:1"=0
+    I:"HarderOres:dummyOreNickel:10"=0
+    I:"HarderOres:dummyOreNickel:11"=0
+    I:"HarderOres:dummyOreNickel:12"=0
+    I:"HarderOres:dummyOreNickel:13"=0
+    I:"HarderOres:dummyOreNickel:14"=0
+    I:"HarderOres:dummyOreNickel:15"=0
+    I:"HarderOres:dummyOreNickel:2"=0
+    I:"HarderOres:dummyOreNickel:3"=0
+    I:"HarderOres:dummyOreNickel:4"=0
+    I:"HarderOres:dummyOreNickel:5"=0
+    I:"HarderOres:dummyOreNickel:6"=0
+    I:"HarderOres:dummyOreNickel:7"=0
+    I:"HarderOres:dummyOreNickel:8"=0
+    I:"HarderOres:dummyOreNickel:9"=0
+    I:"HarderOres:dummyOreSilver:0"=2
+    I:"HarderOres:dummyOreSilver:1"=0
+    I:"HarderOres:dummyOreSilver:10"=0
+    I:"HarderOres:dummyOreSilver:11"=0
+    I:"HarderOres:dummyOreSilver:12"=0
+    I:"HarderOres:dummyOreSilver:13"=0
+    I:"HarderOres:dummyOreSilver:14"=0
+    I:"HarderOres:dummyOreSilver:15"=0
+    I:"HarderOres:dummyOreSilver:2"=0
+    I:"HarderOres:dummyOreSilver:3"=0
+    I:"HarderOres:dummyOreSilver:4"=0
+    I:"HarderOres:dummyOreSilver:5"=0
+    I:"HarderOres:dummyOreSilver:6"=0
+    I:"HarderOres:dummyOreSilver:7"=0
+    I:"HarderOres:dummyOreSilver:8"=0
+    I:"HarderOres:dummyOreSilver:9"=0
+    I:"HarderOres:dummyOreTin:0"=3
+    I:"HarderOres:dummyOreTin:1"=0
+    I:"HarderOres:dummyOreTin:10"=0
+    I:"HarderOres:dummyOreTin:11"=0
+    I:"HarderOres:dummyOreTin:12"=0
+    I:"HarderOres:dummyOreTin:13"=0
+    I:"HarderOres:dummyOreTin:14"=0
+    I:"HarderOres:dummyOreTin:15"=0
+    I:"HarderOres:dummyOreTin:2"=0
+    I:"HarderOres:dummyOreTin:3"=0
+    I:"HarderOres:dummyOreTin:4"=0
+    I:"HarderOres:dummyOreTin:5"=0
+    I:"HarderOres:dummyOreTin:6"=0
+    I:"HarderOres:dummyOreTin:7"=0
+    I:"HarderOres:dummyOreTin:8"=0
+    I:"HarderOres:dummyOreTin:9"=0
+    I:"HarderOres:dummyOreUranium:0"=6
+    I:"HarderOres:dummyOreUranium:1"=0
+    I:"HarderOres:dummyOreUranium:10"=0
+    I:"HarderOres:dummyOreUranium:11"=0
+    I:"HarderOres:dummyOreUranium:12"=0
+    I:"HarderOres:dummyOreUranium:13"=0
+    I:"HarderOres:dummyOreUranium:14"=0
+    I:"HarderOres:dummyOreUranium:15"=0
+    I:"HarderOres:dummyOreUranium:2"=0
+    I:"HarderOres:dummyOreUranium:3"=0
+    I:"HarderOres:dummyOreUranium:4"=0
+    I:"HarderOres:dummyOreUranium:5"=0
+    I:"HarderOres:dummyOreUranium:6"=0
+    I:"HarderOres:dummyOreUranium:7"=0
+    I:"HarderOres:dummyOreUranium:8"=0
+    I:"HarderOres:dummyOreUranium:9"=0
+    I:"HarderOres:machine_processor:0"=1
+    I:"HarderOres:machine_processor:1"=1
+    I:"HarderOres:machine_processor:10"=1
+    I:"HarderOres:machine_processor:11"=1
+    I:"HarderOres:machine_processor:12"=1
+    I:"HarderOres:machine_processor:13"=1
+    I:"HarderOres:machine_processor:14"=1
+    I:"HarderOres:machine_processor:15"=1
+    I:"HarderOres:machine_processor:2"=1
+    I:"HarderOres:machine_processor:3"=1
+    I:"HarderOres:machine_processor:4"=1
+    I:"HarderOres:machine_processor:5"=1
+    I:"HarderOres:machine_processor:6"=1
+    I:"HarderOres:machine_processor:7"=1
+    I:"HarderOres:machine_processor:8"=1
+    I:"HarderOres:machine_processor:9"=1
+    I:"HarderOres:ore_copper:0"=1
+    I:"HarderOres:ore_copper:1"=1
+    I:"HarderOres:ore_copper:10"=1
+    I:"HarderOres:ore_copper:11"=1
+    I:"HarderOres:ore_copper:12"=1
+    I:"HarderOres:ore_copper:13"=1
+    I:"HarderOres:ore_copper:14"=1
+    I:"HarderOres:ore_copper:15"=1
+    I:"HarderOres:ore_copper:2"=1
+    I:"HarderOres:ore_copper:3"=1
+    I:"HarderOres:ore_copper:4"=1
+    I:"HarderOres:ore_copper:5"=1
+    I:"HarderOres:ore_copper:6"=1
+    I:"HarderOres:ore_copper:7"=1
+    I:"HarderOres:ore_copper:8"=1
+    I:"HarderOres:ore_copper:9"=1
+    I:"HarderOres:ore_diamond:0"=2
+    I:"HarderOres:ore_diamond:1"=2
+    I:"HarderOres:ore_diamond:10"=2
+    I:"HarderOres:ore_diamond:11"=2
+    I:"HarderOres:ore_diamond:12"=2
+    I:"HarderOres:ore_diamond:13"=2
+    I:"HarderOres:ore_diamond:14"=2
+    I:"HarderOres:ore_diamond:15"=2
+    I:"HarderOres:ore_diamond:2"=2
+    I:"HarderOres:ore_diamond:3"=2
+    I:"HarderOres:ore_diamond:4"=2
+    I:"HarderOres:ore_diamond:5"=2
+    I:"HarderOres:ore_diamond:6"=2
+    I:"HarderOres:ore_diamond:7"=2
+    I:"HarderOres:ore_diamond:8"=2
+    I:"HarderOres:ore_diamond:9"=2
+    I:"HarderOres:ore_gold:0"=2
+    I:"HarderOres:ore_gold:1"=2
+    I:"HarderOres:ore_gold:10"=2
+    I:"HarderOres:ore_gold:11"=2
+    I:"HarderOres:ore_gold:12"=2
+    I:"HarderOres:ore_gold:13"=2
+    I:"HarderOres:ore_gold:14"=2
+    I:"HarderOres:ore_gold:15"=2
+    I:"HarderOres:ore_gold:2"=2
+    I:"HarderOres:ore_gold:3"=2
+    I:"HarderOres:ore_gold:4"=2
+    I:"HarderOres:ore_gold:5"=2
+    I:"HarderOres:ore_gold:6"=2
+    I:"HarderOres:ore_gold:7"=2
+    I:"HarderOres:ore_gold:8"=2
+    I:"HarderOres:ore_gold:9"=2
+    I:"HarderOres:ore_iron:0"=1
+    I:"HarderOres:ore_iron:1"=1
+    I:"HarderOres:ore_iron:10"=1
+    I:"HarderOres:ore_iron:11"=1
+    I:"HarderOres:ore_iron:12"=1
+    I:"HarderOres:ore_iron:13"=1
+    I:"HarderOres:ore_iron:14"=1
+    I:"HarderOres:ore_iron:15"=1
+    I:"HarderOres:ore_iron:2"=1
+    I:"HarderOres:ore_iron:3"=1
+    I:"HarderOres:ore_iron:4"=1
+    I:"HarderOres:ore_iron:5"=1
+    I:"HarderOres:ore_iron:6"=1
+    I:"HarderOres:ore_iron:7"=1
+    I:"HarderOres:ore_iron:8"=1
+    I:"HarderOres:ore_iron:9"=1
+    I:"HarderOres:ore_lead:0"=2
+    I:"HarderOres:ore_lead:1"=2
+    I:"HarderOres:ore_lead:10"=2
+    I:"HarderOres:ore_lead:11"=2
+    I:"HarderOres:ore_lead:12"=2
+    I:"HarderOres:ore_lead:13"=2
+    I:"HarderOres:ore_lead:14"=2
+    I:"HarderOres:ore_lead:15"=2
+    I:"HarderOres:ore_lead:2"=2
+    I:"HarderOres:ore_lead:3"=2
+    I:"HarderOres:ore_lead:4"=2
+    I:"HarderOres:ore_lead:5"=2
+    I:"HarderOres:ore_lead:6"=2
+    I:"HarderOres:ore_lead:7"=2
+    I:"HarderOres:ore_lead:8"=2
+    I:"HarderOres:ore_lead:9"=2
+    I:"HarderOres:ore_nickel:0"=2
+    I:"HarderOres:ore_nickel:1"=2
+    I:"HarderOres:ore_nickel:10"=2
+    I:"HarderOres:ore_nickel:11"=2
+    I:"HarderOres:ore_nickel:12"=2
+    I:"HarderOres:ore_nickel:13"=2
+    I:"HarderOres:ore_nickel:14"=2
+    I:"HarderOres:ore_nickel:15"=2
+    I:"HarderOres:ore_nickel:2"=2
+    I:"HarderOres:ore_nickel:3"=2
+    I:"HarderOres:ore_nickel:4"=2
+    I:"HarderOres:ore_nickel:5"=2
+    I:"HarderOres:ore_nickel:6"=2
+    I:"HarderOres:ore_nickel:7"=2
+    I:"HarderOres:ore_nickel:8"=2
+    I:"HarderOres:ore_nickel:9"=2
+    I:"HarderOres:ore_redstone:0"=2
+    I:"HarderOres:ore_redstone:1"=2
+    I:"HarderOres:ore_redstone:10"=2
+    I:"HarderOres:ore_redstone:11"=2
+    I:"HarderOres:ore_redstone:12"=2
+    I:"HarderOres:ore_redstone:13"=2
+    I:"HarderOres:ore_redstone:14"=2
+    I:"HarderOres:ore_redstone:15"=2
+    I:"HarderOres:ore_redstone:2"=2
+    I:"HarderOres:ore_redstone:3"=2
+    I:"HarderOres:ore_redstone:4"=2
+    I:"HarderOres:ore_redstone:5"=2
+    I:"HarderOres:ore_redstone:6"=2
+    I:"HarderOres:ore_redstone:7"=2
+    I:"HarderOres:ore_redstone:8"=2
+    I:"HarderOres:ore_redstone:9"=2
+    I:"HarderOres:ore_silver:0"=2
+    I:"HarderOres:ore_silver:1"=2
+    I:"HarderOres:ore_silver:10"=2
+    I:"HarderOres:ore_silver:11"=2
+    I:"HarderOres:ore_silver:12"=2
+    I:"HarderOres:ore_silver:13"=2
+    I:"HarderOres:ore_silver:14"=2
+    I:"HarderOres:ore_silver:15"=2
+    I:"HarderOres:ore_silver:2"=2
+    I:"HarderOres:ore_silver:3"=2
+    I:"HarderOres:ore_silver:4"=2
+    I:"HarderOres:ore_silver:5"=2
+    I:"HarderOres:ore_silver:6"=2
+    I:"HarderOres:ore_silver:7"=2
+    I:"HarderOres:ore_silver:8"=2
+    I:"HarderOres:ore_silver:9"=2
+    I:"HarderOres:ore_tin:0"=1
+    I:"HarderOres:ore_tin:1"=1
+    I:"HarderOres:ore_tin:10"=1
+    I:"HarderOres:ore_tin:11"=1
+    I:"HarderOres:ore_tin:12"=1
+    I:"HarderOres:ore_tin:13"=1
+    I:"HarderOres:ore_tin:14"=1
+    I:"HarderOres:ore_tin:15"=1
+    I:"HarderOres:ore_tin:2"=1
+    I:"HarderOres:ore_tin:3"=1
+    I:"HarderOres:ore_tin:4"=1
+    I:"HarderOres:ore_tin:5"=1
+    I:"HarderOres:ore_tin:6"=1
+    I:"HarderOres:ore_tin:7"=1
+    I:"HarderOres:ore_tin:8"=1
+    I:"HarderOres:ore_tin:9"=1
+    I:"HarderOres:ore_uranium:0"=2
+    I:"HarderOres:ore_uranium:1"=2
+    I:"HarderOres:ore_uranium:10"=2
+    I:"HarderOres:ore_uranium:11"=2
+    I:"HarderOres:ore_uranium:12"=2
+    I:"HarderOres:ore_uranium:13"=2
+    I:"HarderOres:ore_uranium:14"=2
+    I:"HarderOres:ore_uranium:15"=2
+    I:"HarderOres:ore_uranium:2"=2
+    I:"HarderOres:ore_uranium:3"=2
+    I:"HarderOres:ore_uranium:4"=2
+    I:"HarderOres:ore_uranium:5"=2
+    I:"HarderOres:ore_uranium:6"=2
+    I:"HarderOres:ore_uranium:7"=2
+    I:"HarderOres:ore_uranium:8"=2
+    I:"HarderOres:ore_uranium:9"=2
+    I:"HarderUnderground:unstable_stone:0"=0
+    I:"HarderUnderground:unstable_stone:1"=0
+    I:"HarderUnderground:unstable_stone:10"=0
+    I:"HarderUnderground:unstable_stone:11"=0
+    I:"HarderUnderground:unstable_stone:12"=0
+    I:"HarderUnderground:unstable_stone:13"=0
+    I:"HarderUnderground:unstable_stone:14"=0
+    I:"HarderUnderground:unstable_stone:15"=0
+    I:"HarderUnderground:unstable_stone:2"=0
+    I:"HarderUnderground:unstable_stone:3"=0
+    I:"HarderUnderground:unstable_stone:4"=0
+    I:"HarderUnderground:unstable_stone:5"=0
+    I:"HarderUnderground:unstable_stone:6"=0
+    I:"HarderUnderground:unstable_stone:7"=0
+    I:"HarderUnderground:unstable_stone:8"=0
+    I:"HarderUnderground:unstable_stone:9"=0
     I:"ImmersiveEngineering:ore:0"=1
     I:"ImmersiveEngineering:ore:1"=1
     I:"ImmersiveEngineering:ore:2"=3
@@ -9301,6 +9741,46 @@ blocks_shovel {
     I:"GalacticraftCore:tile.moonBlock:9"=0
     I:"GalacticraftMars:tile.mars:5"=0
     I:"GalacticraftMars:tile.mars:6"=0
+    I:"HarderOres:ore_bauxite:0"=1
+    I:"HarderOres:ore_bauxite:1"=1
+    I:"HarderOres:ore_bauxite:10"=1
+    I:"HarderOres:ore_bauxite:11"=1
+    I:"HarderOres:ore_bauxite:12"=1
+    I:"HarderOres:ore_bauxite:13"=1
+    I:"HarderOres:ore_bauxite:14"=1
+    I:"HarderOres:ore_bauxite:15"=1
+    I:"HarderOres:ore_bauxite:2"=1
+    I:"HarderOres:ore_bauxite:3"=1
+    I:"HarderOres:ore_bauxite:4"=1
+    I:"HarderOres:ore_bauxite:5"=1
+    I:"HarderOres:ore_bauxite:6"=1
+    I:"HarderOres:ore_bauxite:7"=1
+    I:"HarderOres:ore_bauxite:8"=1
+    I:"HarderOres:ore_bauxite:9"=1
+    I:"HarderOres:ore_limonite:0"=0
+    I:"HarderOres:ore_limonite:1"=0
+    I:"HarderOres:ore_limonite:10"=0
+    I:"HarderOres:ore_limonite:11"=0
+    I:"HarderOres:ore_limonite:12"=0
+    I:"HarderOres:ore_limonite:13"=0
+    I:"HarderOres:ore_limonite:14"=0
+    I:"HarderOres:ore_limonite:15"=0
+    I:"HarderOres:ore_limonite:2"=0
+    I:"HarderOres:ore_limonite:3"=0
+    I:"HarderOres:ore_limonite:4"=0
+    I:"HarderOres:ore_limonite:5"=0
+    I:"HarderOres:ore_limonite:6"=0
+    I:"HarderOres:ore_limonite:7"=0
+    I:"HarderOres:ore_limonite:8"=0
+    I:"HarderOres:ore_limonite:9"=0
+    I:"HarderWildlife:logRotting:12"=0
+    I:"HarderWildlife:logRotting:13"=0
+    I:"HarderWildlife:logRotting:14"=0
+    I:"HarderWildlife:logRotting:15"=0
+    I:"HarderWildlife:logRotting:4"=0
+    I:"HarderWildlife:logRotting:5"=0
+    I:"HarderWildlife:logRotting:6"=0
+    I:"HarderWildlife:logRotting:7"=0
     I:"MorePlanet:alien_dirt:0"=0
     I:"MorePlanet:alien_dirt:1"=0
     I:"MorePlanet:alien_dirt:10"=0
