--- a/config/IguanaTinkerTweaks/ToolDefaults.cfg
+++ b/config/IguanaTinkerTweaks/ToolDefaults.cfg
@@ -288,6 +288,23 @@ gendustry {
 }
 
 
+harderores {
+
+    diam_stud_axe {
+        I:axe=5
+    }
+
+    diam_stud_pickaxe {
+        I:pickaxe=5
+    }
+
+    diam_stud_shovel {
+        I:shovel=5
+    }
+
+}
+
+
 immersiveengineering {
 
     tool {
