--- a/config/buildcraft/main.cfg
+++ b/config/buildcraft/main.cfg
@@ -98,7 +98,7 @@ general {
     S:pumpDimensionControl=+/*/*,+/-1/lava
 
     # Should pumps consume water? Enabling this might cause performance issues!
-    B:pumpsConsumeWater=false
+    B:pumpsConsumeWater=true
 
     # Do pumps need real (non-redstone) power?
     B:pumpsNeedRealPower=false
