--- a/config/enderio/EnderIO.cfg
+++ b/config/enderio/EnderIO.cfg
@@ -460,7 +460,7 @@ inventorypanel {
     B:reinforcedObsidianEnabled=true
 
     # If set to false reservoirs will not be craftable.
-    B:reservoirEnabled=true
+    B:reservoirEnabled=false
 
     # If set to false: Dimensional Transceivers will not be craftable.
     B:transceiverEnabled=true
