Temporarily disable NEI integration for Pam's due to incompatibility with new version.

--- a/config/HarderOres.cfg
+++ b/config/HarderOres.cfg
@@ -63,9 +63,7 @@ ores {
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsThorium=1
     I:OreExistsTin=2
-
-    #  [range: 0 ~ 2, default: 1]
-    I:OreExistsUranium=1
+    I:OreExistsUranium=2
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsZinc=1
@@ -95,7 +93,7 @@ sluice {
     B:canFindUranium=false
 
     # Set to false to disable the sluice recipe. [default: true]
-    B:enableSluice=false
+    B:enableSluice=true
 
     # Set to true to allow dirt to be used in the sluice.  Dirt acts like sand. [default: false]
     B:sluiceAllowsDirt=false
