Add redstone, fluorite, cadmium, indium, calcite, and magnetite to ore gen.

--- a/config/HarderOres.cfg
+++ b/config/HarderOres.cfg
@@ -48,21 +48,33 @@ ores {
     I:OreExists...=1
 
     #  [range: 0 ~ 2, default: 1]
-    I:OreExistsAluminum=1
+    I:OreExistsAluminum=2
 
     #  [range: 0 ~ 2, default: 1]
-    I:OreExistsCadmium=1
+    I:OreExistsCadmium=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsCopper=2
 
     #  [range: 0 ~ 2, default: 1]
-    I:OreExistsFlourite=1
+    I:OreExistsFlourite=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsLead=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsNickel=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsSilver=2
 
     #  [range: 0 ~ 2, default: 1]
-    I:OreExistsThorium=1
+    I:OreExistsThorium=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsTin=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsUranium=2
 
     #  [range: 0 ~ 2, default: 1]
