First pass enviromine

--- a/config/HarderWildlife.cfg
+++ b/config/HarderWildlife.cfg
@@ -70,7 +70,7 @@ crops {
     # Note: please disable Gany's Surface's snow accumulation, if it is
     # installed (mine results in a smoother variation between blocks).
     #  [default: true]
-    B:EnableCropSlowing=true
+    B:EnableCropSlowing=false
 
     # Enables or disables the crop growth based on biome information (which is effected by seasons,
     # if enabled and ignored if slow crops is disabled). Most (vanilla) biomes have some semblance of a
@@ -79,7 +79,7 @@ crops {
     # this might be required!
     # If disabled, base slowdown probability is used instead.
     #  [default: true]
-    B:EnableCropSlowingByBiome=true
+    B:EnableCropSlowingByBiome=false
 
     # Configures the worst possible growth rate for biome based crop growth.
     # In the worst possible conditions, the chance that crops will grow will not drop
@@ -116,7 +116,7 @@ plants {
     # How old trees can get before dying, in ticks.  This is effectively multiplied by the treeAgeSpeed.
     # Note: setting this below 3000 will cause some trees to die imediately after growing.
     #  [range: 100 ~ 1000000, default: 10000]
-    I:treeMaxAge=10000
+    I:treeMaxAge=100000
 }
 
 
