--- a/config/enviromine/Global_Settings.cfg
+++ b/config/enviromine/Global_Settings.cfg
@@ -17,7 +17,7 @@ Config {
 
 Gases {
     # Disables all gases and slowly deletes existing pockets
-    B:"Disable Gases"=false
+    B:"Disable Gases"=true
 
     # How many gases can be processed in a single pass per chunk (-1 = infinite)
     I:"Gas Pass Limit"=-1
@@ -87,14 +87,14 @@ Potions {
 
     # Generates mineshafts in villages
     B:"Enable Village MineShafts"=true
-    B:"Generate Gases"=true
+    B:"Generate Gases"=false
 }
 
 
 general {
     B:"Blindness instead of Nausea"=false
-    B:"Check For Updates"=true
-    B:"Finite Water"=false
+    B:"Check For Updates"=false
+    B:"Finite Water"=true
     B:"Keep statuses on death"=false
 
     # Render 3d gear worn on player. Must reload game to take effect
